<resources>
    <string name="app_name">KeepDiet</string>
    <string name="bottom_bar_diary">Diary</string>
    <string name="bottom_bar_feed">Feed</string>
    <string name="bottom_bar_group">Group</string>
    <string name="bottom_bar_more">More</string>
    <string name="toolbar_title">Title</string>
    <string name="diary_target_target">Goal</string>
    <string name="diary_target_food">Food</string>
    <string name="diary_target_exercise">Exercise</string>
    <string name="diary_target_remain">Remaining</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="diary_viewpager_food">Food</string>
    <string name="diary_viewpager_exercise">Exercise</string>
    <string name="diary_viewpager_index">Index</string>
    <string name="diary_food_breakfast">Breakfast</string>
    <string name="diary_add">Add</string>
    <string name="diary_add_food">Add Food</string>
    <string name="diary_food_lunch">Lunch</string>
    <string name="diary_food_dinner">Dinner</string>
    <string name="diary_food_snacks">Snacks</string>
    <string name="diary_food_summary">Nutrition Summary</string>
    <string name="feed_title">Post Whatever you like!</string>
    <string name="feed_mike">mike</string>
    <string name="feed_Vino">Vino</string>
    <string name="feed_Tony">Tony</string>
    <string name="feed_button_text">Post Now!</string>
    <string name="vino">Vino</string>
    <string name="olivia">Olivia</string>
    <string name="tony">Tony</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="add_food_title_example">e.g., bananas</string>
    <string name="diary_content_title">Food Name*</string>
    <string name="diary_content_unit_name">Unit*</string>
    <string name="add_food_unit_name_example">e.g., pound</string>
    <string name="add_food_amount_example">e.g., 2.5</string>
    <string name="add_done">Done</string>
    <string name="add_food_calory_per_unit_example">e.g., 200</string>
    <string name="diary_content_amount">Amount*</string>
    <string name="diary_content_calory_per_unit">Calories Per Unit*</string>
    <string name="diary_exercise">Exercise</string>
    <string name="diary_create_exercise">Create Exercise</string>
    <string name="add_exercise_title_example">e.g., Running</string>
    <string name="diary_add_exercise_title">Exercise Name*</string>
    <string name="add_exercise_unit_name_example">e.g., hour</string>
    <string name="more_food_energy">Check Food Energy</string>
    <string name="more_exercise_energy">Check Exercise Energy</string>
    <string name="more_find_group">Find Group</string>
    <string name="more_start_group">Start Group</string>
    <string name="more_settings">Settings</string>
    <string name="diary_create_food">Create Food</string>
    <string name="general_alert">Alert</string>
    <string name="required_item_empty_error">Required items cannot be empty.</string>
    <string name="dismiss">Dismiss</string>
    <string name="no_result_error">No Results Found</string>
    <string name="internet_connection_error">Internet connection error. Please try again.</string>

    <string name="no_group_found">You are not in a group yet</string>
    <string name="join_a_group">Join a Group</string>
    <string name="group">Group</string>

    <string name="diary_edit_food">Edit Food</string>
    <string name="diary_add_exercise">Add Exercise</string>
    <string name="diary_edit_exercise">Edit Exercise</string>
    <string name="delete_item_alert">Are you sure to delete this item?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="copyright_nutrix">Powered by</string>
    <string name="no_group_or">or</string>
    <string name="start_a_group">Start a Group</string>
    <string name="no_group_try">Try</string>
    <string name="find_group">Find Group</string>
    <string name="quick_search">Quick Search</string>
    <string name="search_by_group_name_or_id">Search by Group Name or ID</string>
    <string name="you_can_also">Other Options</string>
    <string name="find_people_like_you">Find People Like You</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="id_or_name">Group ID/Name</string>
    <string name="start_group_name">Group Name*</string>
    <string name="start_group_name_hint">Your group name</string>
    <string name="start_group_goal">Group Goal*</string>
    <string name="maximum_group_member">Maximum Group Member</string>
    <string name="start_group_more">More than</string>
    <string name="start_group_less">Less than</string>
    <string name="enter_your_calories_goal">Enter calories goal</string>
    <string name="daily_chip">Daily Chips*</string>
    <string name="start_group_chip_hint">Enter daily chip</string>
    <string name="start_group">Start Group</string>
    <string name="advanced_group_search">Advanced Group Search</string>
    <string name="group_name">Group Name</string>
    <string name="group_goal">Group Goal</string>
    <string name="join_this_group">Join this group</string>
    <string name="delete_this_group">Quit this group</string>
    <string name="login_in_error">Login failed. Please try again.</string>
    <string name="welcome_user">Welcome,</string>

</resources>
