<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_navigation_bar_item_diary"
        android:icon="@drawable/ic_assignment_black_24dp"
        android:title="@string/bottom_bar_diary"
        app:showAsAction="always" />
    <item
        android:id="@+id/bottom_navigation_bar_item_feed"
        android:icon="@drawable/ic_forum_black_24dp"
        android:title="@string/bottom_bar_feed"
        app:showAsAction="always" />
    <item
        android:id="@+id/bottom_navigation_bar_item_group"
        android:icon="@drawable/ic_group_black_24dp"
        android:title="@string/bottom_bar_group"
        app:showAsAction="always" />
    <item
        android:id="@+id/bottom_navigation_bar_item_more"
        android:icon="@drawable/ic_more_horiz_black_24dp"
        android:title="@string/bottom_bar_more"
        app:showAsAction="always" />
</menu>