<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_add_food"
        android:background="@color/colorPrimary"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diary_create_food"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="@dimen/toolbar_textsize"/>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/diary_content_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diary_content_title"
        style="@style/TextAppearance.AppCompat.Menu"
        android:paddingLeft="@dimen/large_padding"
        android:paddingTop="@dimen/small_padding"/>
    <EditText
        android:id="@+id/diary_content_title_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/large_padding"
        android:hint="@string/add_food_title_example" />
    <TextView
        android:id="@+id/diary_content_unit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diary_content_unit_name"
        style="@style/TextAppearance.AppCompat.Menu"
        android:paddingLeft="@dimen/large_padding"
        android:paddingTop="@dimen/small_padding"/>
    <EditText
        android:id="@+id/diary_content_unit_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/large_padding"
        android:maxLines="1"
        android:hint="@string/add_food_unit_name_example"
        android:inputType=""/>
    <TextView
        android:id="@+id/diary_content_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diary_content_amount"
        style="@style/TextAppearance.AppCompat.Menu"
        android:paddingLeft="@dimen/large_padding"
        android:paddingTop="@dimen/small_padding"/>
    <EditText
        android:id="@+id/diary_content_amount_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/large_padding"
        android:maxLines="1"
        android:hint="@string/add_food_amount_example"
        android:inputType="numberDecimal"/>
    <TextView
        android:id="@+id/diary_content_calory_per_unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diary_content_calory_per_unit"
        style="@style/TextAppearance.AppCompat.Menu"
        android:paddingLeft="@dimen/large_padding"
        android:paddingTop="@dimen/small_padding"/>
    <EditText
        android:id="@+id/diary_content_calory_per_unit_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/large_padding"
        android:maxLines="1"
        android:hint="@string/add_food_calory_per_unit_example"
        android:inputType="numberDecimal"/>


</LinearLayout>
