<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:focusableInTouchMode="true"
    android:id="@+id/find_group_layout">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_find_group"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_group"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="@dimen/toolbar_textsize"/>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quick_search"
        style="@style/TextAppearance.AppCompat.Menu"
        android:paddingLeft="@dimen/large_padding"
        android:paddingTop="@dimen/small_padding"
        android:layout_marginTop="@dimen/small_padding"
        android:layout_marginBottom="@dimen/small_padding"/>
    <android.support.v7.widget.SearchView
        android:id="@+id/search_group_search_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:iconifiedByDefault="false"
        app:defaultQueryHint="@string/search_by_group_name_or_id"
        android:background="@drawable/rounded_corner_background_border"
        android:layout_marginLeft="@dimen/large_padding"
        android:layout_marginRight="@dimen/large_padding"
        android:layout_marginBottom="@dimen/large_padding">
    </android.support.v7.widget.SearchView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/you_can_also"
        style="@style/TextAppearance.AppCompat.Menu"
        android:paddingLeft="@dimen/large_padding"
        android:paddingTop="@dimen/small_padding"
        android:layout_marginBottom="@dimen/small_padding"/>
    <Button
        android:id="@+id/advanced_search_in_find_group"
        style="@style/KeepDietThemeButton"
        android:layout_marginTop="@dimen/small_padding"
        android:layout_marginBottom="@dimen/small_padding"
        android:text="@string/advanced_search"/>
    <Button
        android:id="@+id/start_group_in_find_group"
        style="@style/KeepDietThemeButton"
        android:layout_marginTop="@dimen/small_padding"
        android:layout_marginBottom="@dimen/small_padding"
        android:text="@string/start_a_group"/>

</LinearLayout>