<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_start_group"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advanced_group_search"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="@dimen/toolbar_textsize"/>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/advanced_search_group_goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_group_goal"
        style="@style/TextAppearance.AppCompat.Menu"
        android:paddingLeft="@dimen/large_padding"
        android:paddingTop="@dimen/small_padding"/>
    <Spinner
        android:id="@+id/advanced_search_group_goal_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/start_group_goal"
        android:padding="@dimen/small_padding"
        android:background="@drawable/rounded_corner_background_border_for_spinner"
        android:layout_margin="@dimen/small_padding"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        <Spinner
            android:id="@+id/advanced_search_group_more_less_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/start_group_more_less"
            android:padding="@dimen/small_padding"
            android:background="@drawable/rounded_corner_background_border_for_spinner"
            android:layout_margin="@dimen/small_padding"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:inputType="number"
            android:paddingLeft="@dimen/large_padding"
            android:hint="@string/enter_your_calories_goal"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/daily_chip"
        android:layout_marginLeft="@dimen/large_padding"
        android:layout_marginTop="@dimen/small_padding"
        style="@style/TextAppearance.AppCompat.Menu" />
    <EditText
        android:id="@+id/start_group_chip_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/large_padding"
        android:digits="0123456789"
        android:inputType="number"
        android:hint="@string/start_group_chip_hint" />

</LinearLayout>
