<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_diary"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="More"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="@dimen/toolbar_textsize"/>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/more_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:drawableLeft="@drawable/ic_account_circle_black_48dp"
        android:drawableTint="@color/colorPrimaryDark"
        android:drawablePadding="@dimen/diary_tag_large_padding"
        android:padding="@dimen/diary_tag_large_padding"
        style="@style/TextAppearance.AppCompat.Headline"
        tools:text="Haoting Li" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/whitesmoke" />

    <TextView
        android:id="@+id/more_food_energy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textSize="@dimen/toolbar_title_textsize"
        android:drawableLeft="@drawable/ic_restaurant_black_24dp"
        android:drawablePadding="@dimen/diary_tag_large_padding"
        android:padding="@dimen/diary_tag_large_padding"
        android:drawableTint="@color/colorPrimaryDark"
        android:text="@string/more_food_energy" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/whitesmoke" />

    <TextView
        android:id="@+id/more_exercise_energy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:drawableLeft="@drawable/ic_fitness_center_black_24dp"
        android:drawablePadding="@dimen/diary_tag_large_padding"
        android:padding="@dimen/diary_tag_large_padding"
        android:drawableTint="@color/colorPrimaryDark"
        android:textSize="@dimen/toolbar_title_textsize"
        android:text="@string/more_exercise_energy" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/whitesmoke" />

    <TextView
        android:id="@+id/more_find_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textSize="@dimen/toolbar_title_textsize"
        android:drawableLeft="@drawable/ic_group_black_24dp"
        android:drawablePadding="@dimen/diary_tag_large_padding"
        android:padding="@dimen/diary_tag_large_padding"
        android:drawableTint="@color/colorPrimaryDark"
        android:text="@string/more_find_group" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/whitesmoke" />

    <TextView
        android:id="@+id/more_start_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textSize="@dimen/toolbar_title_textsize"
        android:drawableLeft="@drawable/ic_group_add_black_24dp"
        android:drawablePadding="@dimen/diary_tag_large_padding"
        android:padding="@dimen/diary_tag_large_padding"
        android:drawableTint="@color/colorPrimaryDark"
        android:text="@string/more_start_group" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/whitesmoke" />

    <TextView
        android:id="@+id/more_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textSize="@dimen/toolbar_title_textsize"
        android:drawableLeft="@drawable/ic_settings_black_24dp"
        android:drawablePadding="@dimen/diary_tag_large_padding"
        android:padding="@dimen/diary_tag_large_padding"
        android:drawableTint="@color/colorPrimaryDark"
        android:text="@string/more_settings" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/whitesmoke" />



</LinearLayout>

