<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.keepdiet.android.keepdiet.DiaryFragment">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_diary"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/diary_fragment_toolbar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:drawableRight="@drawable/ic_keyboard_arrow_down_white_24dp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="@dimen/toolbar_textsize"/>
    </android.support.v7.widget.Toolbar>

    <TableLayout
        android:id="@+id/diary_target_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_diary"
        android:background="@color/white"
        android:stretchColumns="*"
        android:padding="@dimen/diary_padding">
        <TableRow>
            <TextView
                android:id="@+id/diary_target_number"
                tools:text="2000"
                style="@style/TextAppearance.AppCompat.Body1"
                android:gravity="center" />
            <TextView
                android:text="-"
                android:gravity="center"/>
            <TextView
                android:id="@+id/diary_food_number"
                tools:text="800"
                style="@style/TextAppearance.AppCompat.Body1"
                android:gravity="center"/>
            <TextView
                android:text="+"
                android:gravity="center"/>
            <TextView
                android:id="@+id/diary_exercise_number"
                tools:text="500"
                style="@style/TextAppearance.AppCompat.Body1"
                android:gravity="center"/>
            <TextView
                android:text="="
                android:gravity="center"/>
            <TextView
                android:id="@+id/diary_remain_number"
                tools:text="1700"
                style="@style/TextAppearance.AppCompat.Body1"
                android:gravity="center"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/diary_target_target"
                android:gravity="center"/>
            <TextView
                tools:text=""
                android:gravity="center"/>
            <TextView
                android:text="@string/diary_target_food"
                android:gravity="center"/>
            <TextView
                tools:text=""
                android:gravity="center"/>
            <TextView
                android:text="@string/diary_target_exercise"
                android:gravity="center"/>
            <TextView
                tools:text=""
                android:gravity="center"/>
            <TextView
                android:text="@string/diary_target_remain"
                android:gravity="center"/>
        </TableRow>
    </TableLayout>

    <View
        android:id="@+id/target_table_bottom_line"
        android:layout_width="match_parent"
        android:layout_below="@id/diary_target_table"
        android:layout_height="1dp"
        android:background="@color/whitesmoke"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/target_table_bottom_line">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/target_table_bottom_line">

            <FrameLayout
                android:id="@+id/diary_breakfast_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/diary_tag_large_padding"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/diary_breakfast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <FrameLayout
                android:id="@+id/diary_breakfast_footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <FrameLayout
                android:id="@+id/diary_lunch_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/diary_lunch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <FrameLayout
                android:id="@+id/diary_lunch_footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <FrameLayout
                android:id="@+id/diary_dinner_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/diary_dinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <FrameLayout
                android:id="@+id/diary_dinner_footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <FrameLayout
                android:id="@+id/diary_snack_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/diary_snack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <FrameLayout
                android:id="@+id/diary_snack_footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <FrameLayout
                android:id="@+id/diary_exercise_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/diary_exercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <FrameLayout
                android:id="@+id/diary_exercise_footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <!--<ScrollView-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_below="@id/target_table_bottom_line">-->
        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/diary_content_fragment_layout"-->
            <!--android:orientation="vertical">-->

            <!--<View-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="@dimen/diary_tag_large_padding" />-->
        <!--</LinearLayout>-->
    <!--</ScrollView>-->

</RelativeLayout>
